--- a/public/css/category.css
+++ b/public/css/category.css
@@ -12,7 +12,7 @@ margin:auto;
     padding:7px;
     border-radius: 10%;
     max-width: 100%;
-    max-height: auto;
+    max-height: 200px;
   }
 h2{
 font-family: Mistral;
